// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TelephoneField /> input field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE JvWob"
    id="testForm"
  >
    <div
      class="sc-kEqYlL dXeAFH"
    >
      <div
        class="sc-lmgQde krpvJC"
      >
        <div
          class="sc-bCwgka ktnsAr"
        >
          <span
            class="sc-iwaifL gyLDXW"
          >
            +48
          </span>
        </div>
        <input
          class="sc-hBMVcZ faAkmN"
          id="testId"
          name="telephone"
          placeholder="Numer telefonu"
          prefix="+48"
          style="border-bottom-left-radius: 0px; border-top-left-radius: 0px;"
          type="tel"
          value="3232a"
        />
      </div>
      <span
        class="sc-ksluoS cNvzFC"
      >
        Podany numer telefonu jest nieprawidłowy
      </span>
    </div>
  </form>
</div>
`;

exports[`<TelephoneField /> matches snapshot 1`] = `
<input
  class="sc-hBMVcZ ftraIU"
  id="testId"
  name="telephone"
  placeholder="Numer telefonu"
  prefix="+48"
  style="border-bottom-left-radius: 0px; border-top-left-radius: 0px;"
  type="tel"
  value=""
/>
`;

exports[`<TelephoneField /> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE JvWob"
    id="testForm"
  >
    <div
      class="sc-kEqYlL dXeAFH"
    >
      <label
        for="telephone"
      >
        FirstName*
      </label>
      <div
        class="sc-lmgQde krpvJC"
      >
        <div
          class="sc-bCwgka ktnsAr"
        >
          <span
            class="sc-iwaifL gyLDXW"
          >
            +48
          </span>
        </div>
        <input
          class="sc-hBMVcZ faAkmN"
          id="testId"
          label="FirstName"
          name="telephone"
          placeholder="Numer telefonu*"
          prefix="+48"
          required=""
          style="border-bottom-left-radius: 0px; border-top-left-radius: 0px;"
          type="tel"
          value=""
        />
      </div>
      <span
        class="sc-ksluoS cNvzFC"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`<TelephoneField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE JvWob"
    id="testForm"
  >
    <div
      class="sc-kEqYlL dXeAFH"
    >
      <label
        for="telephone"
      >
        Telephone
      </label>
      <div
        class="sc-lmgQde krpvJC"
      >
        <div
          class="sc-bCwgka dywdlS"
        >
          <span
            class="sc-iwaifL gyLDXW"
          >
            +48
          </span>
        </div>
        <input
          class="sc-hBMVcZ ftraIU"
          id="testId"
          label="Telephone"
          name="telephone"
          placeholder="Numer telefonu"
          prefix="+48"
          style="border-bottom-left-radius: 0px; border-top-left-radius: 0px;"
          type="tel"
          value=""
        />
      </div>
    </div>
  </form>
</div>
`;
